--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 
             height: 150vh;
         }
+
+        @media screen and (max-width: 600px){
+            .fullHeightRight{
+
+                height: auto;
+            }
+        }
         body{
 
             background-image: url(https://i.pinimg.com/originals/80/a5/1a/80a51a0b7293317a273207178aa12358.jpg);
