--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@
                             <img class="circle " src="../images/JuanBillasante.jpg" alt="Foto de perfil" width="25%" title="Foto de Perfil" style="margin-top: -2cm;">
                         </div>
                     </center>
-                    <div class="button red">
-                        <button class="waves-effect waves-light grey lighten-1 btn-small right"><i class="material-icons center">create</i></button>
+                    <div class="button">
+                        <button class="waves-effect waves-light grey lighten-1 btn-small"><i class="material-icons">create</i></button>
                     </div>
-                    <br>  
                    <div class="card">
                     <p class="center">
-                        Juan Billasante
+                        Juan Tahiel Guidici Billasante
                         <br>
                         <br>
                         Estudiante de ISI | Universidad de la Cuenca del Plata | IT
