--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Juan Billasante" />
+    <meta property="og:description" content="CVs, sitio donde podes crear tu curriculum y ver el de diferentes personas. " />
+    <meta property="og:url" content="https://juanbillasante.github.io/" />
+    <meta property="og:site_name" content="Curriculums" />
+    <meta property="og:image" content="eliasMachuanin.jpg" />
     <title>CV Juan Billasantee</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -94,7 +100,7 @@
             <div class="col s6 m3 white fullHeightRight">
                 <div 
                     class="columna2"><h6>Navegacion</h3>
-                    <div class="responsive-button">
+                    <div class="button">
                         <div class="section">
                             <a class="waves-effect waves-light btn-small">Noticias importantes</a><br>
                         </div>
