--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="CVs, sitio donde podes crear tu curriculum y ver el de diferentes personas. " />
     <meta property="og:url" content="https://juanbillasante.github.io/" />
     <meta property="og:site_name" content="Curriculums" />
-    <meta property="og:image" content="eliasMachuanin.jpg" />
+    <meta property="og:image" content="https://eliasmachuanin.github.io/images/eliasMachuanin.jpg" />
     <title>CV Juan Billasantee</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
